--- a/user_adding.yaml
+++ b/user_adding.yaml
@@ -102,9 +102,13 @@
       ignore_errors: yes
 
     # **Role Assignment Section**
+    - name: Encode role name for URL
+      set_fact:
+        encoded_role_name: "{{ role_name | urlencode }}"
+    
     - name: Get directory role ID by name
       uri:
-        url: "{{ graph_api_endpoint }}/directoryRoles?$filter=displayName eq '{{ role_name }}'"
+        url: "{{ graph_api_endpoint }}/directoryRoles?$filter=displayName%20eq%20'{{ encoded_role_name }}'"
         method: GET
         headers:
           Authorization: "Bearer {{ access_token }}"
